--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,12 @@
     <artifactId>mochi-db</artifactId>
     <version>0.1.0</version>
 
+	<properties>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+		<java.version>1.8</java.version>
+	</properties>
+
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
@@ -51,11 +57,6 @@
 		    <scope>test</scope>
 		</dependency>
     </dependencies>
-
-    <properties>
-        <java.version>1.8</java.version>
-    </properties>
-
 
     <build>
         <plugins>
