--- a/Dockerfile_server
+++ b/Dockerfile_server
@@ -1,7 +1,7 @@
 FROM azul/zulu-openjdk:8u144
 
 RUN java -version  && mkdir -pv /opt/mochi-db/ 
-RUN apt-get update && apt-get install telnet netstat
+RUN apt-get update && apt-get install -y telnet net-tools
 COPY mochi-db-*.jar /opt/mochi-db/
 RUN ls -la /opt/mochi-db/
 
