--- a/Dockerfile_server
+++ b/Dockerfile_server
@@ -1,7 +1,7 @@
 FROM azul/zulu-openjdk:8u144
 
 RUN java -version && mkdir -pv /opt/mochi-db/log/
-RUN apt-get update && apt-get install -y telnet net-tools netcat
+RUN apt-get update && apt-get install -y telnet net-tools netcat vim
 COPY mochi-db-*.jar /opt/mochi-db/
 RUN ls -la /opt/mochi-db/
 
@@ -9,4 +9,5 @@ RUN ls -la /opt/mochi-db/
 EXPOSE 8080
 # Mochi communication
 EXPOSE 8081
+WORKDIR /opt/mochi-db/
 CMD java -jar /opt/mochi-db/mochi-db-*.jar
