--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,11 @@
 		    <version>3.4.0</version>
 		</dependency>
 		<dependency>
+		    <groupId>org.javatuples</groupId>
+		    <artifactId>javatuples</artifactId>
+		    <version>1.2</version>
+		</dependency>
+		<dependency>
 		    <groupId>org.testng</groupId>
 		    <artifactId>testng</artifactId>
 		    <version>6.11</version>
