--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,11 @@
 			<version>1.2</version>
 		</dependency>
 		<dependency>
+		    <groupId>io.dropwizard</groupId>
+		    <artifactId>dropwizard-core</artifactId>
+		    <version>1.2.2</version>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 			<version>3.7</version>
